--- a/MEAN/api/api.yaml
+++ b/MEAN/api/api.yaml
@@ -1,4 +1,51 @@
 swagger: "2.0"
 info:
   title: This is my SWAGGER
-  
+  description: This my compony documentation made by me
+  version: 1.0
+  contact:
+    email: oussema.chercheri01@gmail.com
+  license:
+    name: Apache 2.0
+    url: "http://www.apache.org/"
+  servers:
+    - url : http://localhost:4000
+      description: This is my local server
+    - url : http://api.example.com
+      description: This is my company server
+
+schemes: [http, https]
+
+paths:
+#Returns a string
+  /string:
+    get:
+      summary: Returns a String
+      description: This is a test endpoint.
+      responses:
+        200:
+          description: OK
+          schema:
+            type: string
+            example: "Hello, World!"
+        400:
+          description: Bad Request
+        500:
+          description: Internal Server Error
+
+
+#Returns a object
+  /user:
+    get:
+      summary: This return a single Object
+      description: Returning a object
+      responses:
+        200:
+          description: Success
+          schema:
+            type: object
+            properties:
+              id:
+                type: integer
+              name:
+                type: string
